--- a/#.md
+++ b/#.md
@@ -1,2 +1,8 @@
 # docker-jenkins
 The purpose of this is a custom Docker container for my home Jenkins. The Terraform plugin for Jenkins is less than impressive and consistently does not work in the container format. After a lot of research I've decided that a custom docker container with extra features is the best path forward for my builds.
+
+# Manual Pushes
+```sh
+docker tag jenkins:latest creamers/jenkins:latest
+docker push creamers/jenkins:latest
+```
